--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,10 @@
             margin: 10px;
         }
 
+        #login, #register {
+            margin-right: 20px;
+        }
+
         #image-container {
             text-align: center;
             margin-top: 20px;
@@ -43,23 +47,27 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="#"><img src="logo.png" alt=""
+                <a class="navbar-brand col-lg-3 me-0" href="index.html"><img src="logo.png" alt=""
                         style="max-width: 30%; height: auto;" id="logo"></a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Discover</a>
+                        <a class="nav-link" href="discover.html">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Course</a>
+                        <a class="nav-link" href="login.html">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cek Pembayaran</a>
+                        <a class="nav-link" href="login.html">Cek Pembayaran</a>
                     </li>
-
                 </ul>
+                <div class="d-lg-flex col-lg-3 justify-content-lg-end">
+                    <a href="register.html" class="btn btn-primary" id="register">Register</a>
+                    <a href="login.html" class="btn btn-primary" id="login">Login</a>
+                </div>
+
             </div>
         </div>
     </nav>
