--- a/templates/index.html
+++ b/templates/index.html
@@ -107,26 +107,26 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="index.html">
-                    <img src="logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
+                <a class="navbar-brand col-lg-3 me-0" href="index">
+                    <img src="/static/logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link active" href="index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="discover.html">Discover</a>
+                        <a class="nav-link" href="discover">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">My Course</a>
+                        <a class="nav-link" href="login">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Cek Pembayaran</a>
+                        <a class="nav-link" href="login">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <a href="register.html" class="btn btn-primary" id="register">Register</a>
-                    <a href="login.html" class="btn btn-primary" id="login">Login</a>
+                    <a href="register" class="btn btn-primary" id="register">Register</a>
+                    <a href="login" class="btn btn-primary" id="login">Login</a>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
 
     <!-- Content Start -->
     <div id="image-container">
-        <img src="bg-navbar.jpg" alt="Your Image" class="img-fluid ">
+        <img src="static/bg-navbar.jpg" alt="Your Image" class="img-fluid ">
     </div>
 
     <div class="container">
@@ -147,7 +147,7 @@
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>Web Development</h5>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>Mobile Development</h5>
@@ -174,7 +174,7 @@
                 <div class="col-md-6">
                     <div class="text-center">
                         <div>
-                            <a href="discover.html" class="btn btn-primary" id="lihat">Lihat Selengkapnya</a>
+                            <a href="discover" class="btn btn-primary" id="lihat">Lihat Selengkapnya</a>
                         </div>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <img src="logo.png" alt="" style="max-width: 20%; height: auto;">
+            <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
             <p></p>
         </div>
         <div class="row">
