--- a/templates/login.html
+++ b/templates/login.html
@@ -47,25 +47,25 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="index.html"><img src="logo.png" alt=""
+                <a class="navbar-brand col-lg-3 me-0" href="/"><img src="logo.png" alt=""
                         style="max-width: 30%; height: auto;" id="logo"></a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="discover.html">Discover</a>
+                        <a class="nav-link" href="/discover">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">My Course</a>
+                        <a class="nav-link" href="/login">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Cek Pembayaran</a>
+                        <a class="nav-link" href="/login">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <a href="register.html" class="btn btn-primary" id="register">Register</a>
-                    <a href="login.html" class="btn btn-primary" id="login">Login</a>
+                    <a href="/register" class="btn btn-primary" id="register">Register</a>
+                    <a href="/login" class="btn btn-primary" id="login">Login</a>
                 </div>
 
             </div>
@@ -116,7 +116,7 @@
                     </div>
                     <span>
                         Don’t have an account yet?
-                        <a href="register.html" .html" class="text-primary">Register here</a>
+                        <a href="/register" class="text-primary">Register here</a>
                     </span>
                 </div>
             </div>
