--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,10 @@
             margin: 10px;
         }
 
+        #login, #register {
+            margin-right: 20px;
+        }
+
         #image-container {
             text-align: center;
             margin-top: 20px;
@@ -43,23 +47,26 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="#"><img src="logo.png" alt=""
+                <a class="navbar-brand col-lg-3 me-0" href="/"><img src="logo.png" alt=""
                         style="max-width: 30%; height: auto;" id="logo"></a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Discover</a>
+                        <a class="nav-link" href="/discover">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Course</a>
+                        <a class="nav-link" href="/login">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cek Pembayaran</a>
+                        <a class="nav-link" href="/login">Cek Pembayaran</a>
                     </li>
-
                 </ul>
+                <div class="d-lg-flex col-lg-3 justify-content-lg-end">
+                    <a href="/register" class="btn btn-primary" id="register">Register</a>
+                    <a href="/login" class="btn btn-primary" id="login">Login</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -125,7 +132,7 @@
 
                 <span>
                     Already have an account?
-                    <a href="login.html" class="text-primary">Sign in here.</a>
+                    <a href="/login" class="text-primary">Sign in here.</a>
                 </span>
             </div>
         </div>
