--- a/templates/discover.html
+++ b/templates/discover.html
@@ -111,26 +111,26 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="index.html">
-                    <img src="logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
+                <a class="navbar-brand col-lg-3 me-0" href="/">
+                    <img src="/static/logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="discover.html">Discover</a>
+                        <a class="nav-link active" href="/discover">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">My Course</a>
+                        <a class="nav-link" href="/login">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Cek Pembayaran</a>
+                        <a class="nav-link" href="/login">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <a href="register.html" class="btn btn-primary" id="register">Register</a>
-                    <a href="login.html" class="btn btn-primary" id="login">Login</a>
+                    <a href="/register" class="btn btn-primary" id="register">Register</a>
+                    <a href="/login" class="btn btn-primary" id="login">Login</a>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
             <div class="col" id="kategori">
                 <div class="d-flex flex-row mb-3">
                     <div class="p-2">
-                        <a href="discover.html" class="text-decoration-none custom-text-color">
+                        <a href="/discover" class="text-decoration-none custom-text-color">
                             <h3>Daftar Kategori</h3>
                         </a>
                     </div>
@@ -150,7 +150,7 @@
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>Web Development</h5>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>Mobile Development</h5>
