--- a/templates/index.html
+++ b/templates/index.html
@@ -107,26 +107,26 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="index">
+                <a class="navbar-brand col-lg-3 me-0" href="/">
                     <img src="/static/logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index">Home</a>
+                        <a class="nav-link active" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="discover">Discover</a>
+                        <a class="nav-link" href="/discover">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login">My Course</a>
+                        <a class="nav-link" href="/login">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login">Cek Pembayaran</a>
+                        <a class="nav-link" href="/login">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <a href="register" class="btn btn-primary" id="register">Register</a>
-                    <a href="login" class="btn btn-primary" id="login">Login</a>
+                    <a href="/register" class="btn btn-primary" id="register">Register</a>
+                    <a href="/login" class="btn btn-primary" id="login">Login</a>
                 </div>
             </div>
         </div>
@@ -174,7 +174,7 @@
                 <div class="col-md-6">
                     <div class="text-center">
                         <div>
-                            <a href="discover" class="btn btn-primary" id="lihat">Lihat Selengkapnya</a>
+                            <a href="/discover" class="btn btn-primary" id="lihat">Lihat Selengkapnya</a>
                         </div>
                     </div>
                 </div>
