--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,8 @@
             margin: 10px;
         }
 
-        #login, #register {
+        #login,
+        #register {
             margin-right: 20px;
         }
 
@@ -92,39 +93,22 @@
                     <div class="card-body">
                         <form class="needs-validation mb-6" novalidate="">
                             <div class="mb-3">
-                                <label for="signupFullnameInput" class="form-label">Full Name</label>
-                                <input type="text" class="form-control" id="signupFullnameInput" required="">
-                                <div class="invalid-feedback">Please enter full name</div>
+                                <label for="nickname" class="form-label">Nickname</label>
+                                <input type="text" class="form-control" id="nickname" required="">
                             </div>
 
                             <div class="mb-3">
-                                <label for="signupEmailInput" class="form-label">
-                                    Email
-                                    <span class="text-danger">*</span>
-                                </label>
-                                <input type="email" class="form-control" id="signupEmailInput" required="">
-                                <div class="invalid-feedback">Please enter email.</div>
+                                <label for="username" class="form-label">Username</label>
+                                <input type="username" class="form-control" id="username" required="">
                             </div>
                             <div class="mb-3">
-                                <label for="formSignUpPassword" class="form-label">Password</label>
+                                <label for="password" class="form-label">Password</label>
                                 <div class="password-field position-relative">
-                                    <input type="password" class="form-control fakePassword" id="formSignUpPassword"
-                                        required="">
-                                    <span><i class="bi bi-eye-slash passwordToggler"></i></span>
-                                    <div class="invalid-feedback">Please enter password.</div>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="formSignUpConfirmPassword" class="form-label">Confirm Password</label>
-                                <div class="password-field position-relative">
-                                    <input type="password" class="form-control fakePassword"
-                                        id="formSignUpConfirmPassword" required="">
-                                    <span><i class="bi bi-eye-slash passwordToggler"></i></span>
-                                    <div class="invalid-feedback">Please enter password.</div>
+                                    <input type="password" class="form-control" id="password" required="">
                                 </div>
                             </div>
                             <div class="d-grid">
-                                <button class="btn btn-primary" type="submit">Sign Up</button>
+                                <button class="btn btn-primary" type="submit" onclick="register()">Sign Up</button>
                             </div>
                         </form>
                     </div>
