--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,8 @@
     <title>SkillHub | Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <style>
         #navbar {
@@ -33,7 +35,27 @@
             margin-top: 30px;
         }
     </style>
-    <script></script>
+    <script>
+        function register() {
+            $.ajax({
+                type: "POST",
+                url: "/api/register",
+                data: {
+                    id_give: $("#userid").val(),
+                    pw_give: $("#userpw").val(),
+                    nickname_give: $("#usernick").val(),
+                },
+                success: function (response) {
+                    if (response["result"] === "success") {
+                        alert("User registration complete!");
+                        window.location.href = "/login";
+                    } else {
+                        alert(response["msg"]);
+                    }
+                },
+            });
+        }
+    </script>
 </head>
 
 <body>
@@ -93,22 +115,22 @@
                 <div class="card shadow-sm mb-3">
                     <div class="card-body">
                         <div class="mb-3">
-                            <label for="nickname" class="form-label">Nickname</label>
-                            <input type="text" class="form-control" id="nickname" required="">
+                            <label for="" class="form-label">Nickname</label>
+                            <input type="text" class="form-control" id="usernick" required="">
                         </div>
 
                         <div class="mb-3">
-                            <label for="username" class="form-label">Username</label>
-                            <input type="username" class="form-control" id="username" required="">
+                            <label for="" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="userid" required="">
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
+                            <label for="" class="form-label">Password</label>
                             <div class="password-field position-relative">
-                                <input type="password" class="form-control" id="password" required="">
+                                <input type="password" class="form-control" id="userpw" required="">
                             </div>
                         </div>
                         <div class="d-grid">
-                            <button class="btn btn-primary" type="submit" onclick="register()">Sign Up</button>
+                            <button class="btn btn-primary" type="button" onclick="register()">Sign Up</button>
                         </div>
                     </div>
                 </div>
