update register & login

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,13 +7,16 @@
     <title>SkillHub | Login </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <style>
         #navbar {
             margin: 10px;
         }
 
-        #login, #register {
+        #login,
+        #register {
             margin-right: 20px;
         }
 
@@ -32,6 +35,25 @@
             margin-top: 30px;
         }
     </style>
+    <script>
+        function login() {
+            $.ajax({
+                type: "POST",
+                url: "/api/login",
+                data: { id_give: $('#userid').val(), pw_give: $('#userpw').val() },
+                success: function (response) {
+                    if (response['result'] === 'success') {
+                        $.cookie('mytoken', response['token']);
+
+                        alert('Login complete!')
+                        window.location.href = '/home_visitor'
+                    } else {
+                        alert(response['msg'])
+                    }
+                }
+            })
+        }
+    </script>
 </head>
 
 <body>
@@ -91,19 +113,19 @@
                 <div class="col-xl-5 col-lg-6 col-md-8 col-12">
                     <div class="card shadow-sm mb-6">
                         <div class="card-body">
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Username</label>
-                                    <input type="username" class="form-control" id="username" required="">
+                            <div class="mb-3">
+                                <label for="" class="form-label">Username</label>
+                                <input type="username" class="form-control" id="userid" required="">
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="form-label">Password</label>
+                                <div class="password-field position-relative">
+                                    <input type="password" class="form-control" id="userpw" required="">
                                 </div>
-                                <div class="mb-3">
-                                    <label for="password" class="form-label">Password</label>
-                                    <div class="password-field position-relative">
-                                        <input type="password" class="form-control" id="password" required="">
-                                    </div>
-                                </div>
-                                <div class="d-grid">
-                                    <button class="btn btn-primary" type="submit" onclick="login()">Login</button>
-                                </div>
+                            </div>
+                            <div class="d-grid">
+                                <button class="btn btn-primary" type="submit" onclick="login()">Login</button>
+                            </div>
                         </div>
                     </div>
                     <span>
