update login & registration

--- a/templates/register.html
+++ b/templates/register.html
@@ -44,7 +44,7 @@
                     id_give: $("#userid").val(),
                     pw_give: $("#userpw").val(),
                     nickname_give: $("#usernick").val(),
-                    role: "user"
+                    role_give: "user"
                 },
                 success: function (response) {
                     if (response["result"] === "success") {
