--- a/templates/cekpembayaran_pemilik.html
+++ b/templates/cekpembayaran_pemilik.html
@@ -115,21 +115,21 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="home_pemilik.html">
-                    <img src="logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
+                <a class="navbar-brand col-lg-3 me-0" href="/home_pemilik">
+                    <img src="/static/logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="home_pemilik.html">Home</a>
+                        <a class="nav-link" href="/home_pemilik">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="discover_pemilik.html">Discover</a>
+                        <a class="nav-link" href="/discover_pemilik">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mycourse_pemilik.html">My Course</a>
+                        <a class="nav-link" href="/mycourse_pemilik">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="cekpembayaran_pemilik.html">Cek Pembayaran</a>
+                        <a class="nav-link active" href="/cekpembayaran_pemilik">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
@@ -147,7 +147,7 @@
                     <h5>HTML Course <span class="badge rounded-pill text-bg-warning" id="badge">Pending</span></h5>
                 </div>
                 <p>08 Desember 2023</p>
-                <img src="bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran" class="rounded mx-auto d-block">
+                <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran" class="rounded mx-auto d-block">
                 <p id="pembayaran">Total Pembayaran : Rp. 100.000</p>
                 <div class="d-flex justify-content-end">
                     <button type="button" class="btn btn-primary" id="submit">Acept</button>
@@ -160,7 +160,7 @@
                 </div>
                 <p>08 Desember 2023</p>
                 <p id="pembayaran">Total Pembayaran : Rp. 100.000</p>
-                <img src="bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran" class="rounded mx-auto d-block">
+                <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran" class="rounded mx-auto d-block">
                 <div class="d-flex justify-content-end">
                     <button type="button" class="btn btn-primary" id="submit">Acept</button>
                     <button type="button" class="btn btn-primary" id="submit">Deny</button>
@@ -175,7 +175,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <img src="logo.png" alt="" style="max-width: 20%; height: auto;">
+            <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
             <p></p>
         </div>
         <div class="row">
