--- a/templates/cekpembayaran_visitor.html
+++ b/templates/cekpembayaran_visitor.html
@@ -115,21 +115,21 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="home_visitor.html">
-                    <img src="logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
+                <a class="navbar-brand col-lg-3 me-0" href="/home_visitor">
+                    <img src="/static/logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="home_visitor.html">Home</a>
+                        <a class="nav-link" href="/home_visitor">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="discover_pemilik.html">Discover</a>
+                        <a class="nav-link" href="/discover_pemilik">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mycourse_pemilik.html">My Course</a>
+                        <a class="nav-link" href="/mycourse_pemilik">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="cekpembayaran_pemilik.html">Cek Pembayaran</a>
+                        <a class="nav-link active" href="/cekpembayaran_pemilik">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
@@ -175,7 +175,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <img src="logo.png" alt="" style="max-width: 20%; height: auto;">
+            <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
             <p></p>
         </div>
         <div class="row">
