--- a/templates/detailcourse_visitor.html
+++ b/templates/detailcourse_visitor.html
@@ -91,7 +91,7 @@
             <div class="col" id="kategori">
                 <div class="d-flex flex-row mb-3">
                     <div class="p-2">
-                        <a href="discover_visitor.html" class="text-decoration-none custom-text-color">
+                        <a href="/discover_visitor" class="text-decoration-none custom-text-color">
                             <h3>Daftar Kategori</h3>
 
                         </a>
@@ -106,7 +106,7 @@
                         </h3>
                     </div>
                     <div class="p-2">
-                        <a href="listcourse_visitor.html" class="text-decoration-none custom-text-color">
+                        <a href="/listcourse_visitor" class="text-decoration-none custom-text-color">
                             <h3>Web Development</h3>
                         </a>
                     </div>
@@ -120,7 +120,7 @@
                         </h3>
                     </div>
                     <div class="p-2">
-                        <a href="detailcourse_visitor.html" class="text-decoration-none custom-text-color">
+                        <a href="/detailcourse_visitor" class="text-decoration-none custom-text-color">
                             <h3>HTML</h3>
                         </a>
                     </div>
