--- a/templates/detailcourse_pemilik.html
+++ b/templates/detailcourse_pemilik.html
@@ -96,7 +96,7 @@
             <div class="col" id="kategori">
                 <div class="d-flex flex-row mb-3">
                     <div class="p-2">
-                        <a href="discover_pemilik.html" class="text-decoration-none custom-text-color">
+                        <a href="/discover_pemilik" class="text-decoration-none custom-text-color">
                             <h3>Daftar Kategori</h3>
 
                         </a>
@@ -111,7 +111,7 @@
                         </h3>
                     </div>
                     <div class="p-2">
-                        <a href="listcourse_pemilik.html" class="text-decoration-none custom-text-color">
+                        <a href="/listcourse_pemilik" class="text-decoration-none custom-text-color">
                             <h3>Web Development</h3>
                         </a>
                     </div>
@@ -125,7 +125,7 @@
                         </h3>
                     </div>
                     <div class="p-2">
-                        <a href="detailcourse_pemilik.html" class="text-decoration-none custom-text-color">
+                        <a href="/detailcourse_pemilik" class="text-decoration-none custom-text-color">
                             <h3>HTML</h3>
                         </a>
                     </div>
