--- a/templates/discover.html
+++ b/templates/discover.html
@@ -179,7 +179,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <img src="logo.png" alt="" style="max-width: 20%; height: auto;">
+            <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
             <p></p>
         </div>
         <div class="row">
