--- a/templates/home_visitor.html
+++ b/templates/home_visitor.html
@@ -116,21 +116,21 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="home_visitor.html">
-                    <img src="logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
+                <a class="navbar-brand col-lg-3 me-0" href="/home_visitor">
+                    <img src="/static/logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link active" href="home_visitor.html">Home</a>
+                        <a class="nav-link active" href="/home_visitor">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="discover_visitor.html">Discover</a>
+                        <a class="nav-link" href="/discover_visitor">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mycourse_visitor.html">My Course</a>
+                        <a class="nav-link" href="/mycourse_visitor">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cekpembayaran_visitor.html">Cek Pembayaran</a>
+                        <a class="nav-link" href="/cekpembayaran_visitor">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
@@ -143,7 +143,7 @@
 
     <!-- Content Start -->
     <div id="image-container">
-        <img src="bg-navbar.jpg" alt="Your Image" class="img-fluid ">
+        <img src="/static/bg-navbar.jpg" alt="Your Image" class="img-fluid ">
     </div>
 
     <div class="container">
@@ -155,7 +155,7 @@
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>Web Development</h5>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>Mobile Development</h5>
@@ -182,7 +182,7 @@
                 <div class="col-md-6">
                     <div class="text-center">
                         <div>
-                            <a href="discover_visitor.html" class="btn btn-primary" id="lihat">Lihat Selengkapnya</a>
+                            <a href="/discover_visitor" class="btn btn-primary" id="lihat">Lihat Selengkapnya</a>
                         </div>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <img src="logo.png" alt="" style="max-width: 20%; height: auto;">
+            <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
             <p></p>
         </div>
         <div class="row">
