--- a/templates/listcourse_pemilik.html
+++ b/templates/listcourse_pemilik.html
@@ -96,7 +96,7 @@
             <div class="col" id="kategori">
                 <div class="d-flex flex-row mb-3">
                     <div class="p-2">
-                        <a href="discover_visitor.html" class="text-decoration-none custom-text-color">
+                        <a href="/discover_visitor" class="text-decoration-none custom-text-color">
                             <h3>Daftar Kategori</h3>
                         </a>
                     </div>
@@ -110,7 +110,7 @@
                         </h3>
                     </div>
                     <div class="p-2">
-                        <a href="listcourse_visitor.html" class="text-decoration-none custom-text-color">
+                        <a href="/listcourse_visitor" class="text-decoration-none custom-text-color">
                             <h3>Web Development</h3>
                         </a>
                     </div>
@@ -120,7 +120,7 @@
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>HTML</h5>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col" id="card">
                         <div class="text-center position-relative">
-                            <a href="#!"><img src="bg-navbar.jpg" alt="Grocery Ecommerce Template"
+                            <a href="#!"><img src="/static/bg-navbar.jpg" alt="Grocery Ecommerce Template"
                                     class="mb-3 img-fluid"></a>
                         </div>
                         <h5>CSS</h5>
