--- a/templates/listcourse_visitor.html
+++ b/templates/listcourse_visitor.html
@@ -87,7 +87,7 @@
             <div class="col" id="kategori">
                 <div class="d-flex flex-row mb-3">
                     <div class="p-2">
-                        <a href="discover_visitor.html" class="text-decoration-none custom-text-color">
+                        <a href="/discover_visitor" class="text-decoration-none custom-text-color">
                             <h3>Daftar Kategori</h3>
 
                         </a>
@@ -102,7 +102,7 @@
                         </h3>
                     </div>
                     <div class="p-2">
-                        <a href="listcourse_visitor.html" class="text-decoration-none custom-text-color">
+                        <a href="/listcourse_visitor" class="text-decoration-none custom-text-color">
                             <h3>Web Development</h3>
                         </a>
                     </div>
