--- a/templates/mycourse_visitor.html
+++ b/templates/mycourse_visitor.html
@@ -114,21 +114,21 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="home_visitor.html">
-                    <img src="logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
+                <a class="navbar-brand col-lg-3 me-0" href="/home_visitor">
+                    <img src="/static/logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="home_visitor.html">Home</a>
+                        <a class="nav-link" href="/home_visitor">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="discover_visitor.html">Discover</a>
+                        <a class="nav-link" href="/discover_visitor">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="mycourse_visitor.html">My Course</a>
+                        <a class="nav-link active" href="/mycourse_visitor">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cekpembayaran_visitor.html">Cek Pembayaran</a>
+                        <a class="nav-link" href="/cekpembayaran_visitor">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
@@ -168,7 +168,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <img src="logo.png" alt="" style="max-width: 20%; height: auto;">
+            <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
             <p></p>
         </div>
         <div class="row">
