--- a/templates/cekpembayaran_pemilik.html
+++ b/templates/cekpembayaran_pemilik.html
@@ -7,6 +7,8 @@
     <title>SkillHub | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <style>
         /* Navbar Start */
@@ -99,6 +101,13 @@
 
         /* Footer End */
     </style>
+    <script>
+        function logout() {
+            $.removeCookie('mytoken');
+            alert('You have been logged out!')
+            window.location.href = '/login'
+        }
+    </script>
 </head>
 
 <body>
@@ -133,7 +142,7 @@
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <button class="btn btn-primary" id="logout">Logout</button>
+                    <button class="btn btn-primary" id="logout" onclick="logout()">Logout</button>
                 </div>
             </div>
         </div>
@@ -147,7 +156,8 @@
                     <h5>HTML Course <span class="badge rounded-pill text-bg-warning" id="badge">Pending</span></h5>
                 </div>
                 <p>08 Desember 2023</p>
-                <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran" class="rounded mx-auto d-block">
+                <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran"
+                    class="rounded mx-auto d-block">
                 <p id="pembayaran">Total Pembayaran : Rp. 100.000</p>
                 <div class="d-flex justify-content-end">
                     <button type="button" class="btn btn-primary" id="submit">Acept</button>
@@ -160,7 +170,8 @@
                 </div>
                 <p>08 Desember 2023</p>
                 <p id="pembayaran">Total Pembayaran : Rp. 100.000</p>
-                <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran" class="rounded mx-auto d-block">
+                <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran"
+                    class="rounded mx-auto d-block">
                 <div class="d-flex justify-content-end">
                     <button type="button" class="btn btn-primary" id="submit">Acept</button>
                     <button type="button" class="btn btn-primary" id="submit">Deny</button>
