--- a/templates/listcourse_pemilik.html
+++ b/templates/listcourse_pemilik.html
@@ -7,6 +7,8 @@
     <title>SkillHub | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <style>
         #navbar {
@@ -53,6 +55,13 @@
             margin-left: 5px;
         }
     </style>
+    <script>
+        function logout() {
+            $.removeCookie('mytoken');
+            alert('You have been logged out!')
+            window.location.href = '/login'
+        }
+    </script>
 </head>
 
 <body>
@@ -85,7 +94,7 @@
 
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <button class="btn btn-primary">Logout</button>
+                    <button class="btn btn-primary" onclick="logout()">Logout</button>
                 </div>
             </div>
         </div>
@@ -115,7 +124,7 @@
                         </a>
                     </div>
                 </div>
-                
+
                 <button type="button" class="btn btn-primary" id="tambah">Tambah +</button>
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
                     <div class="col" id="card">
