--- a/templates/login.html
+++ b/templates/login.html
@@ -79,10 +79,10 @@
                         <a class="nav-link" href="/discover">Discover</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">My Course</a>
+                        <a class="nav-link" href="/mycourse">My Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Cek Pembayaran</a>
+                        <a class="nav-link" href="/cekpembayaran">Cek Pembayaran</a>
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
