--- a/templates/mycourse_visitor.html
+++ b/templates/mycourse_visitor.html
@@ -7,6 +7,8 @@
     <title>SkillHub | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <style>
         /* Navbar Start */
@@ -98,6 +100,13 @@
 
         /* Footer End */
     </style>
+    <script>
+        function logout() {
+            $.removeCookie('mytoken');
+            alert('You have been logged out!')
+            window.location.href = '/login'
+        }
+    </script>
 </head>
 
 <body>
@@ -132,7 +141,7 @@
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <button class="btn btn-primary" id="logout">Logout</button>
+                    <button class="btn btn-primary" id="logout" onclick="logout()">Logout</button>
                 </div>
             </div>
         </div>
